package Flyweight;
public class ClothingMarkerStyle implements ProductMarkerStyle {
    @Override
    public void display() {
        System.out.println("Displaying clothing icon with label style.");
    }
}
