package Flyweight;
public class ElectronicsMarkerStyle implements ProductMarkerStyle {
    @Override
    public void display() {
        System.out.println("Displaying electronics icon with label style.");
    }
}
