package Flyweight;

public interface ProductMarkerStyle {
    void display();
}
